fix whitespace on right

--- a/app/javascript/packs/application.scss
+++ b/app/javascript/packs/application.scss
@@ -2,6 +2,11 @@
     padding:0
 }
 
+.row {
+    margin: 0;
+}
+
+
 .appeal-listing {
     box-sizing: border-box;
     font-size: 0.8rem;
